--- a/BuildingFacilityManager/packages.config
+++ b/BuildingFacilityManager/packages.config
@@ -34,6 +34,7 @@
   <package id="Modernizr" version="2.8.3" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="11.0.1" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="Thinktecture.IdentityModel.Core" version="1.1.0" targetFramework="net461" />
   <package id="WebActivatorEx" version="2.0" targetFramework="net461" />
   <package id="WebGrease" version="1.6.0" targetFramework="net461" />
 </packages>
