Implementing the Dashboard

--- a/BuildingFacilityManager/BuildingFacilityManager.csproj
+++ b/BuildingFacilityManager/BuildingFacilityManager.csproj
@@ -239,6 +239,7 @@
     <Compile Include="Models\Work Order\WorkOrder.cs" />
     <Compile Include="Models\Work Order\Enums\WorkOrderStatus.cs" />
     <Compile Include="ViewModels\BuildingTreeViewModel.cs" />
+    <Compile Include="ViewModels\DashBoardViewModel.cs" />
     <Compile Include="ViewModels\GroupsViewModel.cs" />
     <Compile Include="ViewModels\WorkOrderViewModel.cs" />
     <Compile Include="ViewModels\AssetsViewModel.cs" />
@@ -385,9 +386,23 @@
     <Content Include="Content\DataTables\swf\flashExport.swf" />
     <Content Include="Content\fontawesome\font-awesome.css" />
     <Content Include="Content\fontawesome\font-awesome.min.css" />
+    <Content Include="Content\fonts\all.css" />
+    <Content Include="Content\fonts\all.min.css" />
+    <Content Include="Content\fonts\brands.css" />
+    <Content Include="Content\fonts\brands.min.css" />
     <Content Include="Content\fonts\fontawesome-webfont.svg" />
+    <Content Include="Content\fonts\regular.css" />
+    <Content Include="Content\fonts\regular.min.css" />
+    <Content Include="Content\fonts\solid.css" />
+    <Content Include="Content\fonts\solid.min.css" />
+    <Content Include="Content\fonts\svg-with-js.css" />
+    <Content Include="Content\fonts\svg-with-js.min.css" />
+    <Content Include="Content\fonts\v4-shims.css" />
+    <Content Include="Content\fonts\v4-shims.min.css" />
     <Content Include="Content\loading-indicator.css" />
+    <Content Include="Content\sb-adminCustom.css" />
     <Content Include="Content\sb-admin.css" />
+    <Content Include="Content\sb-admin.min.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -452,6 +467,8 @@
     <Content Include="Areas\Admin\Views\Asset\AddWorkOrderFromSpaceAssetsForm.cshtml" />
     <Content Include="Areas\Admin\Views\Asset\AddAssetsFromSpaceAssets.cshtml" />
     <Content Include="Areas\Admin\Views\Group\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\Dashboard\newWorkOrdersToday_Partial.cshtml" />
+    <Content Include="Areas\Admin\Views\Dashboard\newWorkAssetsToday_Partial.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\Chart.bundle.js" />
     <Content Include="Scripts\Chart.bundle.min.js" />
