Update Inspector Area with Assign Fixers to Work Orders and Show own Inspection Tasks

--- a/BuildingFacilityManager/BuildingFacilityManager.csproj
+++ b/BuildingFacilityManager/BuildingFacilityManager.csproj
@@ -192,6 +192,8 @@
     <Compile Include="Areas\Inspector\Controllers\AssetController.cs" />
     <Compile Include="Areas\Inspector\Controllers\BuildingController.cs" />
     <Compile Include="Areas\Inspector\Controllers\DashboardController.cs" />
+    <Compile Include="Areas\Inspector\Controllers\InspectorAuthorizationController.cs" />
+    <Compile Include="Areas\Inspector\Controllers\TaskController.cs" />
     <Compile Include="Areas\Inspector\Controllers\WorkOrderController.cs" />
     <Compile Include="Areas\Inspector\InspectorAreaRegistration.cs" />
     <Compile Include="Areas\Org\Controllers\AssetController.cs" />
@@ -417,7 +419,15 @@
     <Content Include="Content\fonts\svg-with-js.min.css" />
     <Content Include="Content\fonts\v4-shims.css" />
     <Content Include="Content\fonts\v4-shims.min.css" />
+    <Content Include="Content\Images\arrow-sidebar.png" />
+    <Content Include="Content\Images\background.jpg" />
+    <Content Include="Content\Images\Facility-Logo.png" />
+    <Content Include="Content\Images\happ.png" />
     <Content Include="Content\Images\HomePage.jpg" />
+    <Content Include="Content\Images\mark.png" />
+    <Content Include="Content\Images\navbar-logo.png" />
+    <Content Include="Content\Images\Services.png" />
+    <Content Include="Content\Images\sign-logo.png" />
     <Content Include="Content\loading-indicator.css" />
     <Content Include="Content\sb-adminCustom.css" />
     <Content Include="Content\sb-admin.css" />
@@ -456,10 +466,7 @@
     <Content Include="Areas\Inspector\Views\Shared\_SidebarPartial_Inspector.cshtml" />
     <Content Include="Areas\Inspector\Views\Building\Index.cshtml" />
     <Content Include="Areas\Inspector\Views\WorkOrder\Index.cshtml" />
-    <Content Include="Areas\Inspector\Views\Asset\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Asset\Assets_WorkOrders_Partial.cshtml" />
-    <Content Include="Areas\Inspector\Views\Asset\Assets_Table_Inspector_Partial.cshtml" />
-    <Content Include="Areas\Inspector\Views\Asset\Assets_WorkOrders_Partial.cshtml" />
     <Content Include="Areas\Inspector\Views\WorkOrder\WorkOrder_Inspector_Partial.cshtml" />
     <Content Include="Areas\Inspector\Views\WorkOrder\Add_WorkOrder_Inspector_Partial.cshtml" />
     <Content Include="Areas\Org\Views\web.config" />
@@ -503,6 +510,27 @@
     <Content Include="Areas\Admin\Views\Asset\ChangeStatus_Partial.cshtml" />
     <Content Include="Areas\Admin\Views\Dashboard\IconCardsTodayStats_Partial.cshtml" />
     <Content Include="Areas\Admin\Views\Dashboard\PieCharts_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Shared\_Sidebar_BuildingTree_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Dashboard\IconCardsTodayStats_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Dashboard\MyNewTasksToday_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Dashboard\ChangeTaskStatus_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Task\Index.cshtml" />
+    <Content Include="Areas\Inspector\Views\Dashboard\MyScheduledTasks_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\Add_Assets_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\Add_WorKOrder_Asset_Details_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\Add_WorKOrder_SpaceAssets_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\AddAssetsFromSpaceAssets.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\AddWorkOrderFromSpaceAssetsForm.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\Assets_Table_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\Assets_WorkOrders_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\AssetsDetails.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\AssignFixer_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\ChangeStatus_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\Index.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\SingleAssetDetails_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\SingleAssetDetailsOrderTable_Partial.cshtml" />
+    <Content Include="Areas\Inspector\Views\Asset\SpaceAssets.cshtml" />
+    <Content Include="Areas\Inspector\Views\Dashboard\MyTodayWorkOrders_Partial.cshtml" />
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\Chart.bundle.js" />
     <Content Include="Scripts\Chart.bundle.min.js" />
@@ -631,6 +659,7 @@
     <Folder Include="Areas\Admin\Models\" />
     <Folder Include="Areas\Admin\Views\AdminAuthorization\" />
     <Folder Include="Areas\Inspector\Models\" />
+    <Folder Include="Areas\Inspector\Views\InspectorAuthorization\" />
     <Folder Include="Areas\Org\Models\" />
     <Folder Include="Views\Base\" />
   </ItemGroup>
