--- a/BuildingFacilityManager/packages.config
+++ b/BuildingFacilityManager/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="Antlr" version="3.5.0.2" targetFramework="net461" />
+  <package id="Bootbox.JS" version="5.0.1" targetFramework="net461" />
   <package id="bootstrap" version="3.3.7" targetFramework="net461" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net461" />
   <package id="FontAwesome" version="4.0.3" targetFramework="net461" />
